fixed a lot of shiet

--- a/FileCherryPicker.vbproj
+++ b/FileCherryPicker.vbproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\..\Documents\Battery-Indicator\Battery Indicator\Newtonsoft.Json.dll</HintPath>
     </Reference>
